# compliance-review-agent

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: accessibility_agent.py  base_agent.py  brand_agent.py  global_readiness_agent.py  legal_agent.py  orchestrator_agent.py  product_marketing_agent.py
api/: app.py  dependencies.py
config/: logging_config.py  settings.py
db/: base.py  session.py
docker/: Dockerfile.dev
evaluation/: escalation_rules.py  scorer.py
infra/tofu/: README.md
models/: review_result.py
rag/: retriever.py
tests/: conftest.py
